--- a/typing.css
+++ b/typing.css
@@ -1,5 +1,5 @@
 .typing {
-    height: 100vh;
+    height: 5vh;
     /*This part is important for centering*/
     display: grid;
     place-items: center;
@@ -33,6 +33,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 20px;
   }
   
+  .typing-demo-container {
+		text-align: center;
+    margin: 0;
+    padding: 10px ;
+	  }
   
